# PyFCM

./: .gitignore  README.md  pyproject.toml
examples/: aggregation_example.py  clustering_example.py  scenario_analysis_example.py  sensitivity_analysis_example.py  uncertainty_analysis_example.py
src/pyfcm/: __init__.py  aggregation.py  clustering.py  scenario_analysis.py  sensitivity_analysis.py  simulation.py  uncertainty_analysis.py  workbooks.py
